Fixed nav item gaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,14 +80,14 @@ noscript {
     text-align:center;
     font-size:90%;
     font-weight:400;
+    
 }
 
 a.nav-item {
     vertical-align:middle;
     border-bottom:6px solid rgba(0,0,0,0);
-    padding:10px 15px;
+    padding:10px 25px;
     font-weight:400;
-    margin:0px 10px;
     color:white;
 }
 
